# attendance-app

./: .gitignore  AUTH_IMPLEMENTATION.md  DEPLOYMENT.md  NEXT_STEPS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_SUMMARY.md  QUICK_START.md  README.md
backend/: .dockerignore  .env.development  .env.example  DB_INIT_TESTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_JSON_DATA.sh  Dockerfile  FINAL_SUMMARY.md  INITIAL_USERS.md  MIGRATION_COMPARISON.md  NGINX_HOST_SETUP.md  PRODUCTION_CHECKLIST.md  README.md  RUNNING.md  SETUP_SUMMARY.md  TROUBLESHOOT_INIT.md  attendance_report.xlsx  deploy.sh  diagnose.sh  docker-compose.yml  docker-entrypoint.sh  email_otps.json  fix-permissions.sh  nginx.conf  pyproject.toml  send_attendance_sms.py  setup.sh  start-dev.sh
backend/app/: db_setup.py  init_db.py  main.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/init-db/: 01_init_schema.sql  01_init_schema.sql.OLD  02_seed_data.sql  02_seed_data.sql.OLD  README.md
backend/json_data/: departments.json  faculty_data.json  programs.json
backend/migrations/: add_dean_role.sql
backend/reports/: attendance_report_09de3d6c-fcde-440c-ad49-54f7565670d7.xlsx  attendance_report_76cb615b-3cb9-4b7d-b7e0-c2d0ce09d6e3.xlsx  attendance_report_7b3e9ed4-4a24-4487-94ce-9d7ee458a0df.xlsx  attendance_report_sem_id='239a5f2b-ea91-4cfa-a480-044a5daeb384'.xlsx  attendance_report_sem_id='2cf5ea7e-83d8-4070-b59b-b9819e71cca8'.xlsx  attendance_report_sem_id='43b029a7-5571-431e-9fda-225a3ff35bf8'.xlsx  attendance_report_sem_id='743f9b29-38ec-4f21-9205-fd65c526c0f7'.xlsx  (+4 more)
(+305 files in other folders)
