[project]
name = "attendance-app-backend"
version = "1.0.0"
description = "Backend API for Attendance Management System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fpdf>=1.7.2",
    "jwt>=1.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "twilio>=9.7.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
